# data_analyse_service

./: .gitignore  ANALITICS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
data_analyse_project/: __main__.py  di.py
data_analyse_project/settings/: _app.py  _dev.py  _init.py  _prod.py
data_analyse_project/shared/: clients.py  databases.py  encoders.py  lib.py  repositories.py  routes.py
data_analyse_project/web/: application.py
docker-entrypoint/: entrypoint  server
