[project]
name = "data_analyse_project"
version = "0.1.0"
description = "Service for analyse user specified data from different sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosql>=13.4",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "descanso==0.6.0",
    "fastapi>=0.121.1",
    "levenshtein>=0.27.3",
    "msgspec>=0.19.0",
    "niquests>=3.15.2",
    "orjson>=3.11.4",
    "pydantic-settings>=2.11.0",
    "pypika>=0.48.9",
    "rodi>=2.0.8",
    "stamina>=25.1.0",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
debug = ["icecream>=2.1.8"]
lint = [
    "asyncpg-stubs>=0.30.2",
    "importlib-metadata>=8.7.0",
    "lefthook>=2.0.2",
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]
test = [
    "polyfactory>=2.22.3",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
markers = ["longline: Тесты на укорачивание текста с сохранением смыслов"]
timeout = 5
filterwarnings = [
    "ignore:Use of deprecated default '__set_association_proxy__*:DeprecationWarning",
    "ignore:Use of deprecated default '__set_relationships__*:DeprecationWarning",
    "ignore: Use of deprecated default '__check_model__'*:DeprecationWarning",
]

[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
warn_return_any = true
warn_unused_configs = true
allow_redefinition = false
namespace_packages = true
check_untyped_defs = true
disallow_untyped_decorators = true
# Any is 'ok' as long as it is a wildcard
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
strict = false
strict_optional = true
strict_equality = true
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
exclude = [".venv/", "venv/"]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["src.migrations.versions.*"]
ignore_errors = true

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
# See all codes with description
# https://docs.astral.sh/ruff/rules/
extend-select = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "EM101",
    "EM102",
    "ERA001",
    "E731",
    "TC006",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "TC003",
    "ISC001",
    "D205",
    "S101",
    "PGH003",
    "RUF100",
    "C408",
    "FIX002",
    "TD003",
    "TD002",
    "TD004",
    "UP006",
    "UP035",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"src/migrations/versions/*" = ["E501", "D400", "D415"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pylint]
max-args = 7
max-locals = 7
max-public-methods = 7
